--- a/1408.0054/cohesion-rev.tex
+++ b/1408.0054/cohesion-rev.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
+\setlength{\parskip}{0pt}%
 
 
 \usepackage{mathtools}
@@ -118,9 +119,6 @@ can deal with fields like linear algebra \cite{Coquand},
 even formalizing a basic differential-geometric \emph{definition} (such as a principal connection on a smooth manifold) seems intractable,
 not to speak of proving its basic properties.
 
-
-\medskip
-
 We claim that this situation improves drastically by combining two insights from type theory.
 The first is that type theory can be interpreted ``internally''
 in
@@ -165,8 +163,6 @@ such as orbifolds~\cite{MoerdijkPronk,Lerman} and moduli stacks~\cite{Wang}.
 In particular the standard model of SDG known as the {\it Cahiers topos} lifts to a model of
 cohesive homotopy type theory that contains orbifolds and generally moduli stacks equipped with
 synthetic differential structure (section 4.5 of \cite{SchreiberCohesion}).
-
-\medskip
 
 Today it is clear that homotopy theory is at the heart of quantum field theory.
 One way to define an
@@ -261,8 +257,6 @@ Finally, differential cohomology is also the natural context for
 cohesive homotopy type theory.
 \end{enumerate}
 %Therefore, cohesive homotopy type theory provides a very natural language in which to formalize such quantum field theories \emph{directly}.
-
-\vspace{.2cm}
 
 In \S\ref{sec:cohott}, we briefly review homotopy type theory and then describe the axiomatic formulation of cohesion.
 The axiomatization is chosen so that if we \emph{do} build things from the ground up out of sets, then we can construct categories (technically, \io-categories of \io-sheaves) in which cohesive homotopy type theory is valid internally.
@@ -1420,8 +1414,6 @@ homotopy type theory at the moment, but it seems clear that this can be done.
 In any case, a discussion of the quantization step
 in the language of homotopy type theory is possible, but
 beyond the scope of this article.
-
-\medskip
 
 In conclusion then, the amount of gauge QFT notions naturally
 formalized here in cohesive homotopy type theory seems to be remarkable,
