--- a/1312.3239/UnitaryInequivalentRepresentations.tex
+++ b/1312.3239/UnitaryInequivalentRepresentations.tex
@@ -1,10 +1,38 @@
-\documentclass[12pt,a4paper]{article}
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+
 \usepackage{cite}
-\usepackage{hyperref}
 \usepackage{amsmath,amssymb}
 \usepackage{braket}
 \usepackage{graphicx}
+
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+
 \begin{document}
+\date{3 Feb 2017}
 \title{Unitary Inequivalent Representations and Quantum Physics}
 \author{Arman Stepanian\thanks{ Department of physics.University of Tehran, e-mail address: astepanian@ut.ac.ir or a89arman@gmail.com}, Mahsa Kohandel\thanks{ Department of science.Alzahra university, 
 e-mail address: kohandel.mahsa@gmail.com}
