--- a/0908.2914/0908.2914.tex
+++ b/0908.2914/0908.2914.tex
@@ -4,7 +4,7 @@
 %\documentclass[twocolumn,showpacs,preprintnumbers,amsmath,amssymb]{revtex4}
 %\documentclass[preprint,preprintnumbers,amsmath,amssymb]{revtex4}
 
-\documentclass[10pt]{article} %latex
+\documentclass[12pt]{article} %latex
 \usepackage{cite}
 \usepackage{latexsym}
 \usepackage{amsmath}
@@ -13,10 +13,28 @@
 \usepackage{pstricks}
 %\usepackage[notcite]{showkeys}
 
-\oddsidemargin 0 cm \evensidemargin 0 cm %latex
-\textwidth 16.5 cm %latex
-\topmargin -2.0 cm \textheight 23 cm 
+\usepackage{mathpazo}
+\linespread{1.1}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
+\sloppy
         %Special definitions
 \long\def\ca#1\cb{} %Use for commenting out: \ca...\cb
 
@@ -1528,14 +1546,14 @@ it is not a consequence of \eqref{eqn17} alone, but also requires
 \eqref{eqn18}.
 %
 Next---compare with \eqref{eqn10}---define
-\begin{equation}
-C(a,b) = \sum_{A,B} AB\Pr(A,B\vb a,b)
-%\notag\\ 
-  = \sum_{A,B} AB\Pr(A\vb a,\lm)\Pr(B\vb b,\lm) \Pr(\lm)
-%\notag\\
- = \sum_\lm  A_a(\lm) B_b(\lm) \Pr(\lm)
+\begin{align}
+C(a,b) &= \sum_{A,B} AB\Pr(A,B\vb a,b)
+\notag\\ 
+  &= \sum_{A,B} AB\Pr(A\vb a,\lm)\Pr(B\vb b,\lm) \Pr(\lm)
+\notag\\
+ &= \sum_\lm  A_a(\lm) B_b(\lm) \Pr(\lm)
 \label{eqn20}
-\end{equation}
+\end{align}
 where
 \begin{equation}
   A_a(\lm) := \sum_A A \Pr(A\vb a,\lm),\hquad
