--- a/1802.08101v1/haqft1.tex
+++ b/1802.08101v1/haqft1.tex
@@ -1,8 +1,30 @@
-\documentclass{amsbook}
+\documentclass[11pt]{amsbook}
 
 \usepackage{amsmath,amssymb,amsthm,leftidx}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+%\usepackage[noBBpl]{mathpazo}
+%\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
 \usepackage[all,color]{xy}
-\usepackage[pagebackref]{hyperref} 
 \usepackage{MnSymbol}
 \usepackage{bbm}
 \usepackage[mathscr]{eucal}
