--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-15 07:43:02 -0400 
+%% Created for Pete Su at 2019-09-19 22:47:13 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Chen2019,
+	Abstract = {Abstract A century after the discovery of quantum mechanics, the meaning of quantum mechanics still remains elusive. This is largely due to the puzzling nature of the wave function, the central object in quantum mechanics. If we are realists about quantum mechanics, how should we understand the wave function? What does it represent? What is its physical meaning? Answering these questions would improve our understanding of what it means to be a realist about quantum mechanics. In this survey article, I review and compare several realist interpretations of the wave function. They fall into three categories: ontological interpretations, nomological interpretations, and the sui generis interpretation. For simplicity, I will focus on non-relativistic quantum mechanics.},
+	Author = {Chen, Eddy Keming},
+	Date-Added = {2019-09-19 22:46:26 -0400},
+	Date-Modified = {2019-09-19 22:47:13 -0400},
+	Doi = {10.1111/phc3.12611},
+	Journal = {Philosophy Compass},
+	Note = {\href{https://arxiv.org/abs/1810.07010}{arXiv:1810.07010}},
+	Number = {7},
+	Pages = {e12611},
+	Title = {Realism about the wave function},
+	Url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/phc3.12611},
+	Volume = {14},
+	Year = {2019},
+	Bdsk-Url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/phc3.12611},
+	Bdsk-Url-2 = {https://doi.org/10.1111/phc3.12611}}
 
 @article{Schreiber2014,
 	Author = {Schreiber, Urs and Shulman, Michael},
