clean up leifer pictures

--- a/1409.1570/Leifer.tex
+++ b/1409.1570/Leifer.tex
@@ -30,6 +30,7 @@
 \usepackage{verbatim}
 \usepackage{fontenc}
 \usepackage{cuted}
+\usepackage[papersize={6.9in, 11in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 
 \hypersetup{
 colorlinks=true
@@ -48,7 +49,6 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -169,6 +169,9 @@ Reviews subsequent work aimed at ruling out stronger notions of what it means fo
 \raisebox{-0.2\height}{\includegraphics[width=5mm]{CC}}\raisebox{-0.2\height}{\includegraphics[width=5mm]{BY}}
 \footnotesize{This is an open access article distributed under the terms of the Creative Commons Attribution License \href{http://creativecommons.org/licenses/by/3.0/}{CC-BY-3.0}, which permits unrestricted use, distribution, and reproduction in any medium, provided the original author and source are credited.}
 \end{figure}
+
+\newpage
+
 \section{Introduction}
 
 \label{Intro}
@@ -381,11 +384,11 @@ nature and scope of knowledge.  An \emph{epistemic state} is therefore
 a description of what an observer currently knows about a physical
 system.  It is something that exists in the mind of the observer
 rather than in the external physical world.
-\begin{figure}[t!]
+\begin{figure}[p!]
 \centering
-\subfloat[\color{blue} An ontic state is a point in phase space.]{\includegraphics[width=75mm]{Fig1a.pdf}}\\
-\subfloat[\color{blue} An epistemic state is a probability density on phase space. Contours indicate lines of equal probability density.]{\includegraphics[width=75mm]{Fig1b.pdf}}\\
-\subfloat[\color{blue} An ontic state (cross) is deemed possible in more than one epistemic state ($f_1$ and $f_2$).  Phase space has been schematically collapsed down to one dimension for illustrative purposes.]{\includegraphics[width=75mm]{Fig1c.pdf}}
+\subfloat[\color{blue} An ontic state is a point in phase space.]{\includegraphics[height=1.5in]{Fig1a.pdf}}\\
+\subfloat[\color{blue} An epistemic state is a probability density on phase space. Contours indicate lines of equal probability density.]{\includegraphics[height=1.5in]{Fig1b.pdf}}\\
+\subfloat[\color{blue} An ontic state (cross) is deemed possible in more than one epistemic state ($f_1$ and $f_2$).  Phase space has been schematically collapsed down to one dimension for illustrative purposes.]{\includegraphics[height=1.5in]{Fig1c.pdf}}
 \caption{\color[HTML]{0000FF}{\label{fig:OEQ:Ontic-Epistemic}The distinction between ontic and epistemic states in
 single particle classical mechanics.}}
 \end{figure}
@@ -664,7 +667,7 @@ single \emph{toy bit}.  The toy theory is meant to demonstrate the
 explanatory power of $\psi$-epistemic interpretations by providing
 natural explanations of many quantum phenomena that are puzzling if
 the quantum state is ontic.
-\begin{figure}[t!]
+\begin{figure}[ht]
 \centering
 \includegraphics[width=79mm]{Fig2.pdf}
 \caption{\color[HTML]{0000FF}{\label{fig:toy-ontic}The ontic state space of Spekkens
@@ -2073,10 +2076,47 @@ discussed in \S\ref{Spek} depend crucially on having overlap between
 the measures representing different quantum states, so whether or not
 there is overlap is the key issue.
 
-\begin{figure}[t!]
+
+The notion of when two probability measures overlap can be formalized
+using the variational distance.
+\begin{definition}
+\label{def:POEM:vd}
+The \emph{variational distance} between two probability measures
+$\mu$ and $\nu$ on a measurable space $(\Lambda, \Sigma)$ is
+\begin{equation}
+\label{eq:POEM:vd}
+D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left | \mu(\Omega) -
+\nu(\Omega) \right |.
+\end{equation}
+\end{definition}
+
+
+Note that taking the absolute value in Eq.~\eqref{eq:POEM:vd} is
+optional, since if $\nu(\Omega) > \mu(\Omega)$ for some $\Omega \in
+\Sigma$ then
+\begin{equation}
+\mu(\Lambda \backslash \Omega) - \nu(\Lambda \backslash \Omega) =
+1 - \mu(\Omega) - 1 + \nu(\Omega) = \nu(\Omega) - \mu(\Omega),
+\end{equation}
+so there is always another measurable set for which the difference of
+the measures is the same, but $\mu$ is larger than $\nu$.  Thus, the
+variational distance can equivalently be defined as
+
+\begin{equation}
+D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left ( \mu(\Omega) -
+\nu(\Omega) \right ),
+\end{equation}
+or indeed
+\begin{equation}
+D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left ( \nu(\Omega) -
+\mu(\Omega) \right ).
+\end{equation}
+
+
+\begin{figure}[p!]
 \centering
 \subfloat[\color{blue} Ontic model with nonoverlapping quantum
-states.]{\includegraphics[width=75mm]{Fig9a.pdf}\label{fig:POEM:relabel:start}}\\
+states.]{\includegraphics[height=1.5in]{Fig9a.pdf}\label{fig:POEM:relabel:start}}\\
 \subfloat[\color{blue} Relabeling the ontic
 states.]{\label{fig:POEM:relabel:relabel}
 \raisebox{15ex}{
@@ -2097,7 +2137,7 @@ $10$ & $(\psi_3,5)$ \\
 \hline
 \end{tabular}}}\\
 \subfloat[\color{blue} Equivalent model in which the quantum state is explicitly
-part of the ontology.]{\label{fig:POEM:relabel:end}\includegraphics[width=75mm]{Fig9c.pdf}}
+part of the ontology.]{\label{fig:POEM:relabel:end}\includegraphics[height=2in]{Fig9c.pdf}}
 \caption{\color[HTML]{0000FF}{\label{fig:POEM:relabel}In an ontological model, if the
 probability measures corresponding to distinct quantum states do
 not overlap, then the ontic states can be relabeled such that the
@@ -2112,39 +2152,6 @@ explicit part of the ontology.  The result is shown in
 Panel~\protect\subref{fig:POEM:relabel:end}.}}
 \end{figure}
 
-The notion of when two probability measures overlap can be formalized
-using the variational distance.
-\begin{definition}
-\label{def:POEM:vd}
-The \emph{variational distance} between two probability measures
-$\mu$ and $\nu$ on a measurable space $(\Lambda, \Sigma)$ is
-\begin{equation}
-\label{eq:POEM:vd}
-D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left | \mu(\Omega) -
-\nu(\Omega) \right |.
-\end{equation}
-\end{definition}
-
-Note that taking the absolute value in Eq.~\eqref{eq:POEM:vd} is
-optional, since if $\nu(\Omega) > \mu(\Omega)$ for some $\Omega \in
-\Sigma$ then
-\begin{equation}
-\mu(\Lambda \backslash \Omega) - \nu(\Lambda \backslash \Omega) =
-1 - \mu(\Omega) - 1 + \nu(\Omega) = \nu(\Omega) - \mu(\Omega),
-\end{equation}
-so there is always another measurable set for which the difference of
-the measures is the same, but $\mu$ is larger than $\nu$.  Thus, the
-variational distance can equivalently be defined as
-\begin{equation}
-D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left ( \mu(\Omega) -
-\nu(\Omega) \right ),
-\end{equation}
-or indeed
-\begin{equation}
-D(\mu,\nu) = \sup_{\Omega \in \Sigma} \left ( \nu(\Omega) -
-\mu(\Omega) \right ).
-\end{equation}
-
 The variational distance is a metric on the set of probability
 measures and it has the following operational interpretation.  Suppose
 that a system is prepared according to one of two preparation
@@ -2158,12 +2165,12 @@ a set $\Omega \subseteq \Lambda$ and guess $P_1$ if $\lambda \in
 could use a probabilistic procedure, but convexity implies that this
 cannot increase your probability of success.  Your probability of
 success is then
-\begin{align}
-&&\text{Prob}(P_1)\text{Prob}(\Omega|P_1) + \text{Prob}(P_2)
-\text{Prob}(\Lambda \backslash \Omega|P_2)\nonumber\\
-&&=\frac{1}{2}\mu(\Omega) + \frac{1}{2}\nu(\Lambda \backslash \Omega)
+\begin{multline}
+\text{Prob}(P_1)\text{Prob}(\Omega|P_1) + \text{Prob}(P_2)
+\text{Prob}(\Lambda \backslash \Omega|P_2)\\
+=\frac{1}{2}\mu(\Omega) + \frac{1}{2}\nu(\Lambda \backslash \Omega)
 =\frac{1}{2} \left ( 1 + \mu(\Omega) - \nu(\Omega) \right ),
-\end{align}
+\end{multline}
 so the maximum probability of success over all such strategies is
 $\frac{1}{2} \left ( 1 + D(\mu,\nu) \right )$.  Success can occur with
 unit probability only when $D(\mu,\nu) = 1$, so in this case $\lambda$
