--- a/1712.04721v1/v4.review-higgs.tex
+++ b/1712.04721v1/v4.review-higgs.tex
@@ -17,8 +17,10 @@ bookmarksopenlevel=10
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
-\tolerance=2000
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=5000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
 
 \biboptions{sort&compress}
@@ -1735,10 +1737,11 @@ However, the masslessness of the vector is not sufficient to mimic an Abelian ga
 As noted above, the importance of this observation is that only such a mechanism can actually rescue the idea of GUTs that the hypercharge is part of an overarching single gauge interaction to explain the relative hypercharges of the particles in the standard model \cite{Langacker:1980js}. The mechanism outlined above therefore deserves further studies. This is especially true as the GUT scenarios requires larger gauge groups with more involved Higgs sectors \cite{Langacker:1980js}.
 
 However, when considering large groups with a higgs in the adjoint representation, another problem arises. As was discussed in section \ref{ss:strata} multiple breaking patterns become possible. Especially, a gauge condition involving an explicit vacuum expectation value can no longer be satisfied for every configuration, if the vacuum expectation value in the gauge condition and the configuration belong to different strata. This also affects gauge-invariant perturbation theory. In analogy to \pref{mppi}, the following situation arises \cite{Maas:2017xzh}
-\bea
-\langle \op^\dagger(x) \op(y)\rangle&=&\int{\cal D}w\left(~\int_\text{Selected stratum}{\cal D}\phi \op^\dagger(x)\op(y)e^{iS}+\int_\text{Other strata}{\cal D}\phi\op^\dagger(x)\op(y)e^{iS}\right)\nonumber\\
-&=&\langle \op^\dagger(x)\op(y)\rangle_e+\langle \op^\dagger(x) \op(y)\rangle_n\nn.
-\eea
+\begin{align}
+\langle \op^\dagger(x) \op(y)\rangle&=\int{\cal D}w\left(~\int_\text{Selected stratum}{\cal D}\phi \op^\dagger(x)\op(y)e^{iS}\right.\nonumber\\
+& \qquad +\left. \int_\text{Other strata}{\cal D}\phi\op^\dagger(x)\op(y)e^{iS}\right)\nonumber\\
+&=\langle \op^\dagger(x)\op(y)\rangle_e+\langle \op^\dagger(x) \op(y)\rangle_n\nn.
+\end{align}
 \no Thus, any correlator decomposes into a part ($e$) which is evaluated on those configurations where the gauge condition can be fulfilled, and a part ($n$) in which it is evaluated on configurations for which the gauge condition degenerates to a non-aligned covariant gauge. On the first part gauge-invariant perturbation theory can be applied. This is not true for the second part.
 
 As discussed in section \ref{ss:strata}, it now depends on the actual behavior of the second part what the physics is. For the mass spectrum this boils down to the question what the pole structure of the $n$-part is. If there are no poles in it, then the spectrum is determined by the pole structure of the $e$-part. However, this implies that for a given set of parameters there is only one gauge condition associated with a particular stratum which can be used for the purpose of gauge-invariant perturbation theory. This seems odd at first. However, when recalling that only aligned gauges can be used in the standard model case for the same end, it does not seem odd that there is a 'preferred' gauge. However, it is important to note that this does not physically prefer a gauge, but only technically. After all, perturbation theory is not necessary to evaluate the left-hand side, it is just convenient.
