--- a/1409.1570/Leifer.tex
+++ b/1409.1570/Leifer.tex
@@ -30,7 +30,7 @@
 \usepackage{verbatim}
 \usepackage{fontenc}
 \usepackage{cuted}
-\usepackage[papersize={6.9in, 11in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10.5in}, left=.5in, right=.5in, top=.5in, bottom=1in]{geometry}
 
 \hypersetup{
 colorlinks=true
