--- a/quant-ph-0401052/Epistemicview_041005.tex
+++ b/quant-ph-0401052/Epistemicview_041005.tex
@@ -3,10 +3,37 @@
 %\def\h{\frac{1}{2}}
 
 
-\documentclass[pra,twocolumn,nofootinbib,showpacs]{revtex4}
+\documentclass[pra,nofootinbib,showpacs,12pt]{revtex4}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{mathptm}
 \usepackage{amsmath}
 \usepackage{graphicx}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+
+\sloppy
 
 \setcounter{MaxMatrixCols}{10}
 %TCIDATA{OutputFilter=LATEX.DLL}
@@ -28,7 +55,7 @@
 \address{Perimeter Institute for Theoretical Physics,\\
 31 Caroline St.~North, Waterloo, Canada N2L 2Y5}
 \title{In defense of the epistemic view of quantum states: a toy theory}
-\date{\today}
+\date{7 October 2005}
 
 \begin{abstract}
 We present a toy theory that is based on a simple principle: the
