--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-20 07:29:55 -0400 
+%% Created for Pete Su at 2019-09-24 07:02:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Spekkens2007,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {https://ui.adsabs.harvard.edu/abs/2007PhRvA..75c2110S},
+	Archiveprefix = {arXiv},
+	Author = {{Spekkens}, Robert W.},
+	Date-Added = {2019-09-24 06:59:51 -0400},
+	Date-Modified = {2019-09-24 07:02:22 -0400},
+	Doi = {10.1103/PhysRevA.75.032110},
+	Eid = {032110},
+	Eprint = {quant-ph/0401052},
+	Journal = {Phys. Rev. A},
+	Keywords = {03.65.Ta, 03.67.-a, Foundations of quantum mechanics, measurement theory, Quantum information, Quantum Physics},
+	Month = {Mar},
+	Note = {\href{https://arxiv.org/abs/quant-ph/0401052}{arXiv:quant-ph/0401052}},
+	Number = {3},
+	Pages = {032110},
+	Primaryclass = {quant-ph},
+	Title = {{Evidence for the epistemic view of quantum states: A toy theory}},
+	Volume = {75},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1103/PhysRevA.75.032110}}
 
 @article{Awodey2000-AWOTRO,
 	Author = {Steve Awodey},
