--- a/0706.2661/harrigan_spekkens.tex
+++ b/0706.2661/harrigan_spekkens.tex
@@ -1,24 +1,7 @@
 \documentclass[aps,nofootinbib,12pt]{revtex4}
-\usepackage{mathpazo}
-\linespread{1.1}
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,pagecolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
-%\usepackage[small]{titlesec}
+
+\input{../helpers/fixarxiv-palatino.tex}
+\input{../helpers/revtex-12-fix.tex}
 \sloppy
 \usepackage{amsfonts}
 \usepackage{amsmath}
