--- a/0706.2661/harrigan_spekkens.tex
+++ b/0706.2661/harrigan_spekkens.tex
@@ -1,6 +1,27 @@
 \documentclass[aps,nofootinbib,12pt]{revtex4}
 
-\input{../helpers/fixarxiv-palatino.tex}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.1in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 \input{../helpers/revtex-12-fix.tex}
 \sloppy
 \usepackage{amsfonts}
