--- a/1703.06230/rdhpp4.tex
+++ b/1703.06230/rdhpp4.tex
@@ -1,11 +1,36 @@
 %%78029  22/09/2016 08:28 pm
-\documentclass[final,3p,times,twocolumn]{elsarticle3}
+\documentclass[final,3p,12pt]{elsarticle3}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+
 %\documentclass[final,3p,times,twocolumn]{myarticle3}
 
 %% The amssymb package provides various useful mathematical symbols
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{bm}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\input{../helpers/revtex-12-fix.tex}
 
 \setlength{\arraycolsep}{2pt}
 
