experiment with minion symbol sums

--- a/bib.bib
+++ b/bib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-24 07:02:40 -0400 
+%% Created for Pete Su at 2019-09-27 07:48:43 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -2956,14 +2956,14 @@ horizon.},
 	Archiveprefix = {arXiv},
 	Arxivid = {1703.06230},
 	Author = {Dick, Rainer},
-	Date-Modified = {2019-02-10 14:04:25 +0000},
+	Date-Modified = {2019-09-27 07:48:43 -0400},
 	Doi = {10.1016/j.shpsb.2016.10.003},
 	Eprint = {1703.06230},
 	Isbn = {1355-2198},
 	Issn = {18792502},
 	Journal = {Studies in History and Philosophy of Science Part B - Studies in History and Philosophy of Modern Physics},
 	Keywords = {Born's rule,Continuous quantum evolution,Epistemic states,Interpretations of quantum theory,Ontic states,Quantum jumps},
-	Note = {{\url{https://arxiv.org/abs/1703.06230}}},
+	Note = {{\href{https://arxiv.org/abs/1703.06230}{arXiv: 1703.06230}}},
 	Pages = {115--125},
 	Title = {{Quantum jumps, superpositions, and the continuous evolution of quantum states}},
 	Volume = {57},
