--- a/helpers/fixarxiv-palatino.tex
+++ b/helpers/fixarxiv-palatino.tex
@@ -16,8 +16,13 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
-\input{../helpers/revtex-12-fix.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
