--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-27 07:48:43 -0400 
+%% Created for Pete Su at 2019-09-28 14:47:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Norsen2007,
+	Abstract = {We examine the prevalent use of the phrase ``local realism'' in the context of Bell's Theorem and associated experiments, with a focus on the question: what exactly is the `realism' in `local realism' supposed to mean? Carefully surveying several possible meanings, we argue that all of them are flawed in one way or another as attempts to point out a second premise (in addition to locality) on which the Bell inequalities rest, and (hence) which might be rejected in the face of empirical data violating the inequalities. We thus suggest that the phrase `local realism' should be banned from future discussions of these issues, and urge physicists to revisit the foundational questions behind Bell's Theorem.},
+	Author = {Norsen, Travis},
+	Date-Added = {2019-09-28 14:47:26 -0400},
+	Date-Modified = {2019-09-28 14:47:53 -0400},
+	Day = {01},
+	Doi = {10.1007/s10701-007-9104-1},
+	Issn = {1572-9516},
+	Journal = {Foundations of Physics},
+	Month = {Mar},
+	Note = {\href{https://arxiv.org/abs/quant-ph/0607057}{https://arXiv:quant-ph/0607057}},
+	Number = {3},
+	Pages = {311--340},
+	Title = {Against `Realism'},
+	Url = {https://doi.org/10.1007/s10701-007-9104-1},
+	Volume = {37},
+	Year = {2007},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s10701-007-9104-1}}
 
 @article{Spekkens2007,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
