--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-28 21:30:58 -0400 
+%% Created for Pete Su at 2019-09-29 07:53:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Carroll:2017BB,
+	Archiveprefix = {arXiv},
+	Author = {Carroll, Sean M.},
+	Date-Added = {2019-09-29 07:52:54 -0400},
+	Date-Modified = {2019-09-29 07:53:39 -0400},
+	Eprint = {1702.00850},
+	Note = {\href{https://arxiv.org/abs/1702.00850}{arXiv:1702.00850}},
+	Primaryclass = {hep-th},
+	Reportnumber = {CALT-2017-004},
+	Slaccitation = {%%CITATION = ARXIV:1702.00850;%%},
+	Title = {{Why Boltzmann Brains Are Bad}},
+	Year = {2017}}
 
 @article{Hartle:2007zv,
 	Archiveprefix = {arXiv},
