--- a/helpers/fixarxiv-lucida.tex
+++ b/helpers/fixarxiv-lucida.tex
@@ -25,3 +25,5 @@ bookmarksopenlevel=10
 % the lucida varphi is hideous
 \DeclareSymbolFont{greekletters}{OML}{zplm}{m}{it}
 \DeclareMathSymbol{\varphi}{\mathord}{greekletters}{"27}
+
+\input{../helpers/fix-underbrace.tex}
