--- a/helpers/fixarxiv-ebgaramond.tex
+++ b/helpers/fixarxiv-ebgaramond.tex
@@ -13,6 +13,10 @@ bookmarksopenlevel=10
 }
 \usepackage{amssymb}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
 \usepackage{garamondx}
 \usepackage[cmintegrals,cmbraces]{newtxmath}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=5000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\input{../helpers/fix-underbrace.tex}
