--- a/helpers/fixarxiv-fourier.tex
+++ b/helpers/fixarxiv-fourier.tex
@@ -12,7 +12,8 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 \usepackage{fourier}
-\usepackage[papersize={6.5in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \usepackage[small]{titlesec}
 
+\input{../helpers/fix-underbrace.tex}
