--- a/helpers/fixarxiv-garamondx.tex
+++ b/helpers/fixarxiv-garamondx.tex
@@ -13,6 +13,9 @@ bookmarksopenlevel=10
 }
 \usepackage{amssymb}
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.3in]{geometry}
 \usepackage[osf]{garamondx}
 \usepackage[garamondx,cmintegrals,cmbraces]{newtxmath}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=5000
+\hbadness=2000
+\usepackage[small]{titlesec}
