--- a/quant-ph-0406173/relbohmkon.tex
+++ b/quant-ph-0406173/relbohmkon.tex
@@ -1,12 +1,39 @@
 % final version for FPL
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
 \usepackage[dvips]{graphics}
-\setlength{\textwidth}{6.3in}
-%  \setlength{\textwidth}{6.0in} % for PRD
-\setlength{\textheight}{9.2in}
-\setlength{\oddsidemargin}{0.0in}
-\setlength{\evensidemargin}{\oddsidemargin}
-\setlength{\topmargin}{-0.7in}
 %     \linespread{1.6}
 
 \begin{document}
