--- a/1205.1992/1205.1992.tex
+++ b/1205.1992/1205.1992.tex
@@ -24,7 +24,13 @@ bookmarksopenlevel=10
 \usepackage{mathpazo}
 
 \linespread{1.1}
-\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
 \sloppy
 
 %\documentclass{psp-rv975x65}
