--- a/1305.1280/Travis_Norsen.tex
+++ b/1305.1280/Travis_Norsen.tex
@@ -1,10 +1,45 @@
 
 
-\documentclass[aps,prc,twocolumn,letterpaper,floatfix]{revtex4}
+\documentclass[aps,prc,onecolumn,letterpaper,floatfix,12pt]{revtex4}
 \usepackage{graphicx,amsmath,amssymb}
 \usepackage[usenames,dvipsnames]{pstricks}
 \usepackage{pst-grad}
 \usepackage{url}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+% different \sum and also fixes underbraces
+\input{../helpers/mnsymbol.tex}
+
+% optional
+
+\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+
+\sloppy
+\renewcommand{\hbar}{\hslash}
 
 
 \begin{document}
