--- a/1305.1280/Travis_Norsen.tex
+++ b/1305.1280/Travis_Norsen.tex
@@ -77,7 +77,7 @@ In an earlier paper, which readers are encouraged to examine first and
 which I refer to hereafter as ``the earlier paper,'' I
 attempted to give a physicists' introduction to the alternative, de
 Broglie - Bohm 
-pilot-wave theory of quantum phenomena. \cite{pwp}  
+pilot-wave theory of quantum phenomena \cite{pwp}.   
 As a so-called ``hidden
 variable theory'' the pilot-wave theory adds something to the state
 descriptions of ordinary quantum mechanics:  in addition to the usual
@@ -116,7 +116,7 @@ and \eqref{guidance} that the probability distribution will
 \emph{remain} $|\Psi|^2$-distributed for all times.  The family of
 possible particle trajectories thus ``flows along with'' $\rho$, a
 property that has been dubbed the ``equivariance'' of the $|\Psi|^2$
-probability distribution.   \cite{qe}
+probability distribution \cite{qe}.   
 
 Critics of the theory often argue that the addition of these definite
 particle positions is pointless (or ``metaphysical'') because at the
@@ -158,7 +158,7 @@ for other kinds of measurements as well can be understood by including
 the particles constituting the measuring device in the system under
 study.  Consider for example a simple
 schematic treatment of the measurement of, say, the energy of a particle
-with initial wave function $\psi_0(x)$.  \cite{particle}
+with initial wave function $\psi_0(x)$ \cite{particle}.  
 The measurement apparatus is imagined to have a pointer with
 spatial coordinate $y$ and initial wave function $\phi(y) = \phi_0(y)$
 where $\phi_0$ is a narrow packet centered at the origin, corresponding
@@ -217,7 +217,7 @@ mechanics courses, those involving intrinsic spin and its measurement
 non-classical Zweideutigkeit or ``two-valuedness'' \cite{pauli} -- 
 seem perhaps the least amenable to the pilot-wave type of analysis
 just sketched.  Indeed, it is sometimes reported that the pilot-wave
-theory simply cannot deal with spin phenomena in a plausible way.  \cite{motl}
+theory simply cannot deal with spin phenomena in a plausible way \cite{motl}.  
 This view was expressed very eloquently by one of the anonymous
 referees of the earlier paper:
 \begin{quote}
@@ -233,7 +233,7 @@ motivated by the various ``no hidden variables'' theorems, such as
 that due to Kochen and Specker, which show quite clearly that it is mathematically
 impossible to assign pre-existing values to all relevant 
 spin-components of an ensemble of particles such that the quantum
-mechanical predictions are reproduced.  \cite{ks,mermin}
+mechanical predictions are reproduced \cite{ks,mermin}.  
 That is, it is known to be
 impossible to do, for all of the non-commuting components of spin, 
 what the pilot-wave theory, as sketched above, does for position.  
@@ -247,8 +247,8 @@ paper is to resolve this paradox and explain how.
 The main ideas of the paper are not new.  The pilot-wave theory was
 applied to spin already in 1955 by Bohm \emph{et al.} \cite{bst}, and
 numerical simulations of the theory's account of spin measurements
-were carried out by Dewdney \emph{et al.} in the 1980s.  \cite{dhk}
-Our approach here, following Bell's more elegant treatment in Ref. \cite{bellspin},
+were carried out by Dewdney \emph{et al.} in the 1980s \cite{dhk}.  
+Our approach here, following Bell's more elegant treatment in Ref. \cite{bellspin} ,
 instead aims at simplicity and accessibility.  In particular, the
 proposed delta-function model
 of a Stern-Gerlach experiment (the one genuine novelty in the paper) 
@@ -274,7 +274,7 @@ orthodox points of view are then made in Section \ref{sec7}.
 The Stern-Gerlach experiment, first and most famously performed in
 1922, involves subjecting a beam of particles to an inhomogenous
 magnetic field so the particles experience a force proportional to a
-certain component of their intrinsic spin angular momenta. \cite{sg} 
+certain component of their intrinsic spin angular momenta \cite{sg}.  
 Since, empirically, the incident beam gets split into two or more discrete
 sub-beams (as opposed to a continuous distribution), the experiment is
 usually understood as demonstrating the quantization of spin angular
@@ -287,7 +287,7 @@ magnetic field
 \label{b}
 \end{equation}
 as might be produced, for example, by the magnets indicated in Figure
-\ref{fig1}.  \cite{field}
+\ref{fig1} \cite{field}.  
 For a neutral spin-1/2 particle (such as the
 silver atoms used in the original S-G experiment) the interaction
 Hamiltonian is
@@ -550,7 +550,7 @@ Plugging into Equation \eqref{vel} then gives
 \end{equation}
 No matter its exact location within the wave, the particle will simply 
 drift in the positive $y$-direction with the group velocity of the
-incident packet.  \cite{reflectedwave}
+incident packet \cite{reflectedwave}.  
 
 Eventually of course the particle will encounter the fields at
 $y=0$ and pass over into the overlap region on the $y>0$ side. Here,
@@ -688,7 +688,7 @@ eigen-spinors
 \chi_0 = c_{+n} \chi_{+n} + c_{-n} \chi_{-n}
 \end{equation}
 and the whole analysis of Sections II and III goes through, with $z$
-being simply everywhere replaced by $n$.  \cite{angle}
+being simply everywhere replaced by $n$ \cite{angle}.  
 So it should be immediately
 clear that the pilot wave theory reproduces the usual quantum
 statistical predictions for spin measurements, whether it is the $z$-
@@ -768,7 +768,7 @@ Schr\"odinger evolution of the wave -- has occurred.  The other,
 ``spin-down-along-$x$'', part of the wave is still present -- it's
 just ``over there'', far away from the actual location of the
 particle, and hence dynamically irrelevant to the present or future
-motion of the particle. \cite{future}  This separation of the different spin
+motion of the particle \cite{future}.   This separation of the different spin
 components of the wave packet of course happens in ordinary quantum
 mechanics as well.  But in ordinary QM, there is nothing like the
 \emph{actual} position of the particle in addition to the wave
@@ -936,8 +936,8 @@ carried out using the alternative $\text{SG}'_z$ device, the exact
 same ``particle'' -- that is, the exact same wave function and the exact
 same particle location in the upper half of the wave packet -- is
 instead destined to eventually find itself in the upward-deflected
-sub-beam and hence be counted as ``spin-\emph{down} along $z$''.  
-\cite{context}
+sub-beam and hence be counted as ``spin-\emph{down} along $z$'' \cite{context}.  
+
 
 
 %p.8: “The non-contextual hidden variable theory” is presented at first as if one
@@ -990,7 +990,7 @@ due to an editorial
 accident.)  The somewhat more famous Kochen-Specker ``no hidden
 variables'' theorem, which appeared the year after Bell's paper, also
 assumes non-contextuality, as discussed in the beautiful review
-paper by Mermin.  \cite{ks, mermin}
+paper by Mermin \cite{ks, mermin}.  
 
 As Bell explains, these proofs all rely on relating ``in a nontrivial
 way the results of experiments which cannot be performed
@@ -1020,7 +1020,7 @@ to define the conditions under which the phenomena appear.''
 Bohr (the arch-opponent of hidden variables) in Bell's \emph{defense}
 of hidden variables (against the theorems supposedly, but not
 actually, showing them to be impossible) as a ``judo-like
-manoeuvre''.  \cite{shimony}
+manoeuvre'' \cite{shimony}.  
 
 For our purposes, the upshot of all this is the following.  In
 the literature on hidden variables, one often finds the
@@ -1110,7 +1110,7 @@ have discussed previously for the pilot-wave theory of single particles.
 The CWFs have however several perhaps-unexpected properties that should be
 acknowledged.  First, it should be appreciated that,
 in general, the CWFs do not obey some simple one-particle
-Schr\"odinger equation.  \cite{telb}   Evaluating Equation
+Schr\"odinger equation \cite{telb}.     Evaluating Equation
 \eqref{factor} at $\vec{x}_2 = \vec{X}_2$ gives an overall
 (time-dependent) multiplicative factor which means that (even in the
 case of non-entangled particles) the overall phase and normalization
@@ -1266,8 +1266,8 @@ $\text{SG}_z$-based measurement, that measurement will have outcome
 to a state proportional to $\chi_{-z}$, and the subsequent measurement
 of particle 2's $z$-spin will have outcome ``spin-down''.  On the
 other hand, if Alice removes the $\text{SG}_z$ device, the measurement
-of particle 2's $z$-spin will instead have the outcome ``spin-up''.
-\cite{signaling}
+of particle 2's $z$-spin will instead have the outcome ``spin-up'' \cite{signaling}.
+
 It is clear that the non-locality is a form of contextuality in which
 the part of the experimental ``context'' affecting the realized
 outcome of the experiment is \emph{remote}.
@@ -1303,7 +1303,7 @@ of course, the ``grossly non-local structure'' of the pilot-wave
 theory and ordinary QM turns out to be ``characteristic ... of any
 such theory which reproduces exactly the quantum mechanical
 predictions'' -- as shown in Bell's \emph{other} landmark paper, of
-1964.  \cite{bell64}
+1964 \cite{bell64}.  
 
 
 \section{Conclusions}
@@ -1367,7 +1367,7 @@ the theory (backed up by Bell's theorem)
 shows that there is nothing the least bit contrived or
 intolerable in the sort of contextuality that is required to eliminate
 the ``unprofessionally vague and ambiguous'' aspects of ordinary QM in
-favor of something clear and mathematically precise. \cite{vague} 
+favor of something clear and mathematically precise \cite{vague}.  
 
 The idea that there should be something contrived or intolerable about
 contextuality undoubtedly arises from the idea that, if a property
@@ -1375,11 +1375,11 @@ really exists, measurement of it should -- by definition --
 simply reveal its value.  It
 would be hard, actually, to disagree with this sentiment.  The key
 question, though, is precisely whether any such property exists.  As
-has been discussed in illuminating detail in Ref. \cite{nrao},
+has been discussed in illuminating detail in Ref \cite{nrao} ,
 the real lesson to be taken away from examining the
 pilot-wave perspective on spin is that so-called ``contextual
 properties'' (like the individual spin components in the pilot-wave
-theory) are not properties at all. \cite{history} They simply do not exist and
+theory) are not properties at all \cite{history}.  They simply do not exist and
 there is nothing mysterious about this at all, just as there is
 nothing mysterious in the fact that the 
 eventual flavor of a loaf of bread (which depends not just on
@@ -1419,7 +1419,7 @@ Unfortunately, even some of the people in the best possible position
 to understand this important point -- namely, proponents of the
 pilot-wave theory -- have missed it and have thus pointlessly laden the
 theory with additional variables
-corresponding to such actual spin components.  \cite{holland}  One
+corresponding to such actual spin components \cite{holland}.    One
 goal of the present paper is thus to present, in a clear and
 accessible way, the \emph{simplest possible} pilot-wave account of spin, in
 order to rectify misconceptions like that held by the anonymous
@@ -1486,7 +1486,7 @@ The reason for this schizophrenia, I suspect, is that orthodox quantum
 physicsts are, after all, physicists.  They cannot just ``shut up and calculate'' --
 not completely.  They need \emph{some} sort of visualizable picture of
 what, physically, the mathematical formalism describes, or they simply
-cannot keep track of what in the world they are talking about.  \cite{picture}
+cannot keep track of what in the world they are talking about \cite{picture}.  
 So they retain the classical picture while simultaneously, out of the other
 sides of their mouths, rejecting it.  
 
@@ -1716,7 +1716,7 @@ this level of detail in the main text.
   ``Naive Realism about Operators'' \emph{Erkenntnis} 
 {\bf{45}}, 379-397 (1996), 
 
-\bibitem{history}  The authors of Ref. \cite{nrao} describe themselves
+\bibitem{history}  The authors of Ref \cite{nrao}.  describe themselves
   as following Bell in concluding that, for the pilot-wave theory,
   ``spin is not real''.  Bell, for example, writes:  ``We have here a
   picture in which although the wave has two components, the particle
