--- a/quant-ph-0609163v2/myths.tex
+++ b/quant-ph-0609163v2/myths.tex
@@ -43,7 +43,7 @@ P.O.B. 180, HR-10002 Zagreb, Croatia \\
 {\normalsize e-mail: hrvoje@thphys.irb.hr} \\
 \makebox[1in]{} \\
 }
-\date{\today}
+\date{16 Apr 2007}
 %-----------------------------------------------------------------------
 \begin{document}
 \maketitle
@@ -69,8 +69,11 @@ research.
 
 
 
+\newpage
 
 \tableofcontents
+
+\newpage
 
 \section{Introduction}
 
@@ -665,7 +668,7 @@ may seem rather natural.
 On the other hand, most scientists (apart from quantum physicists) 
 do not find such a radical interpretation of the scientific method
 appealing. In particular, many consider such an interpretation too 
-antropomorfic (was there any reality before humans or living beings
+anthropomorfic (was there any reality before humans or living beings
 existed?), while the history of science surprised us several times
 by discovering that we (the human beings) are not so an important 
 part of the universe as we thought we were. 
@@ -3098,8 +3101,7 @@ on QM as definite facts.
 
 
 
-\section*{Acknowledgments}
-\addcontentsline{toc}{section}{Acknowledgments}
+\section{Acknowledgments}
 
 As this work comprises the foundational background for a large part 
 of my own scientific research in several seemingly different branches 
@@ -3120,7 +3122,7 @@ Republic of Croatia.
 %under Contract No.~0098002.
 
 \begin{thebibliography}{99}
-\addcontentsline{toc}{section}{References}
+%\addcontentsline{toc}{section}{References}
 
 
 \bibitem{bohm}
